--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   
+
+
+  <script src="https://kit.fontawesome.com/ca11177b7a.js" crossorigin="anonymous"></script>
 </body>
 </html>
