add section navbar and herp

--- a/index.html
+++ b/index.html
@@ -9,6 +9,46 @@
 </head>
 <body>
   
+<header class="main-header">
+  <nav>
+    <h1 class="logo">Ahmed Habeeb</h1>
+    <ul class="nav-links">
+      <li><a href="#about">About</a></li>
+      <li><a href="#work">Work</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+
+
+<!-- --------- main--------- -->
+
+<div class="container">
+
+<section class="hero">
+
+  <div class="hero-content flex">
+    <h2>Ahmed Habeeb <br> Photography</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur est tenetur! Ut, suscipit? Est distinctio vero quo sunt saepe?</p>
+    <a href="#gallery">Gallery</a>
+  </div>
+   
+  <div class="hero-img">
+    <img class="hero-ahmed" src="/img/16115054_10210476267577073_7567332730517374878_n.jpg" alt="pic of ahmed">
+  </div>
+ 
+</section>
+
+
+
+
+</div>
+
+
+
+
+
 
 
   <script src="https://kit.fontawesome.com/ca11177b7a.js" crossorigin="anonymous"></script>
